Vertex Colors and Hair Particles crashes Blender #75263

Closed
opened 2020-04-01 05:56:32 +02:00 by Gabriel · 10 comments

System Information
Operating system: MacOS Catalina
Graphics card: Intel Iris 1536MB

Blender Version
Broken: 2.82

Short description of error
If you have Vertex enabled in the viewport colors, and also have a vertex color group AND a particle system on any one object, Blender will crash. This is confusing, because you wouldn't know that this crash is dependent on Vertex viewport color display.

Exact steps for others to reproduce the error
In a new file, do these 3 things in no specific order:

  1. Add a Particle System to the default cube and set it to Hair.
  2. Click on the dropdown arrow at the top right corner of the viewport. Make sure you are in Solid Viewport mode. Under the 6 "Color" options, select "Vertex".
  3. Make sure the default cube is selected, and change the object interaction mode to Vertex Paint, or add a Vertex Color group.

If you've done any 2 of these, Blender 2.82 stable should immediately crash and quit right when you do the remaining (third) thing.

**System Information** Operating system: MacOS Catalina Graphics card: Intel Iris 1536MB **Blender Version** Broken: 2.82 **Short description of error** If you have Vertex enabled in the viewport colors, and also have a vertex color group AND a particle system on any one object, Blender will crash. This is confusing, because you wouldn't know that this crash is dependent on Vertex viewport color display. **Exact steps for others to reproduce the error** In a new file, do these 3 things in no specific order: 1. Add a Particle System to the default cube and set it to Hair. 2. Click on the dropdown arrow at the top right corner of the viewport. Make sure you are in Solid Viewport mode. Under the 6 "Color" options, select "Vertex". 3. Make sure the default cube is selected, and change the object interaction mode to Vertex Paint, or add a Vertex Color group. If you've done any 2 of these, Blender 2.82 stable should immediately crash and quit right when you do the remaining (third) thing.
Author

Added subscriber: @CuriousHobbyist

Added subscriber: @CuriousHobbyist
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce here.

System Information
Operating system: Linux-5.5.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64
version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 06:33, hash: 29eb891658

You havent mentioned your OS version, is this [including GPU drivers] up-to-date?
Also: please check if this is still an issue with a fresh build from https://builder.blender.org/download/

Cannot reproduce here. **System Information** Operating system: Linux-5.5.8-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 version: 2.83 (sub 11), branch: master, commit date: 2020-04-01 06:33, hash: `29eb891658` You havent mentioned your OS version, is this [including GPU drivers] up-to-date? Also: please check if this is still an issue with a fresh build from https://builder.blender.org/download/
Author

(Reply to Philipp)

First of all, I was using 2.82, so that might be why you can't reproduce it. Second, I did fill the OS version, but I made a mistake- I am still using MacOS Mojave. I don't know how I miswrote that! Anyway, maybe what you're looking for is specifically the version number of Mojave. It's 10.14.6. The 14 stands for Mojave, so I guess it's the 6th version of Mojave.

(Reply to Philipp) First of all, I was using 2.82, so that might be why you can't reproduce it. Second, I did fill the OS version, but I made a mistake- I am still using MacOS Mojave. I don't know how I miswrote that! Anyway, maybe what you're looking for is specifically the version number of Mojave. It's 10.14.6. The 14 stands for Mojave, so I guess it's the 6th version of Mojave.
Member

First of all, I was using 2.82, so that might be why you can't reproduce it

I tested that, also no crash there [even though displays differently in 2.82]

Have you check if this is still an issue with a fresh build from https://builder.blender.org/download/?

> First of all, I was using 2.82, so that might be why you can't reproduce it I tested that, also no crash there [even though displays differently in 2.82] Have you check if this is still an issue with a fresh build from https://builder.blender.org/download/?
Author

(Philipp) What do you mean by "displays differently in 2.82"? Also, maybe I will check the new version.

(Philipp) What do you mean by "displays differently in 2.82"? Also, maybe I will check the new version.
Author

Update- I tried this with the April 1 build of 2.83 experimental. I did all 3 things I mentioned before that, combined, crashed 2.82, and it didn't crash 2.83. Maybe this has to do with just MacOS or something. Also, this is on a Mac mini from Late 2014. As for GPU drivers, I forgot to touch on this earlier. The Intel Iris 1536MB graphics card is built into the 2014 mac mini, and I haven't ever worked with GPU drivers at all, I think this is something you have to do on Windows if you have an external GPU. Also, the interface for the 3 steps did not look different in 2.83 than 2.82. I still don't at all know what "displays differently" means.

Update- I tried this with the April 1 build of 2.83 experimental. I did all 3 things I mentioned before that, combined, crashed 2.82, and it didn't crash 2.83. Maybe this has to do with just MacOS or something. Also, this is on a Mac mini from Late 2014. As for GPU drivers, I forgot to touch on this earlier. The Intel Iris 1536MB graphics card is built into the 2014 mac mini, and I haven't ever worked with GPU drivers at all, I think this is something you have to do on Windows if you have an external GPU. Also, the interface for the 3 steps did not look different in 2.83 than 2.82. I still don't at all know what "displays differently" means.
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Philipp Oeser self-assigned this 2020-04-02 11:15:27 +02:00
Member

What do you mean by "displays differently in 2.82"

What I mean is that, starting from 6eaf51ef3e, hairs now display with the vertex paint taken into account.
Prior to 6eaf51ef3e, hairs just displayed pitch black in Viewport Shading Vertex Color mode.
Note there seems to be a bug in the display itself tbh -- they display wrong (locations do not match)... but that is a different topic.

Update- I tried this with the April 1 build of 2.83 experimental. I did all 3 things I mentioned before that, combined, crashed 2.82, and it didn't crash 2.83

I think we have to close this report then [I assume it might have been 6eaf51ef3e actually that fixed the crash].
Regarding the (faulty) display, I will open a separate report for this.

Thx for you report, but will close since the crash is fixed already...

> What do you mean by "displays differently in 2.82" What I mean is that, starting from 6eaf51ef3e, hairs now display with the vertex paint taken into account. Prior to 6eaf51ef3e, hairs just displayed pitch black in Viewport Shading Vertex Color mode. Note there seems to be a bug in the display itself tbh -- they display wrong (locations do not match)... but that is a different topic. > Update- I tried this with the April 1 build of 2.83 experimental. I did all 3 things I mentioned before that, combined, crashed 2.82, and it didn't crash 2.83 I think we have to close this report then [I assume it might have been 6eaf51ef3e actually that fixed the crash]. Regarding the (faulty) display, I will open a separate report for this. Thx for you report, but will close since the crash is fixed already...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75263
No description provided.